--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
         "eslint-plugin-prettier": "^5.0.0",
         "postcss": "^8.4.27",
         "prettier": "^3.0.1",
+        "react-hook-form": "^7.45.4",
         "react-router-dom": "^6.14.2",
+        "react-spinners": "^0.13.8",
         "tailwindcss": "^3.3.3"
     }
 }
